temporarily disable fsst and fast-pfor
Two reasons for this:

 - To be able to get the java converter running on non-windows platforms
 - To lower the barrier to writing encoders that will not easily have
   access to these encodings in their first versions